creusot/tests/should_fail/prusti/match/homes.stderr
error: expected `X` found `creusot_contracts::prusti::Zombie<X>`
 --> homes.rs:6:5
  |
6 | /     match x {
7 | |         Some(x) => x,
8 | |         None => default,
9 | |     }
  | |_____^

error: aborting due to 1 previous error

